# restocost

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  create_admin.py  create_db.py  pyproject.toml  pyrightconfig.json  pytest_python314_patch.py  run_tests.py  sitecustomize.py
backend/alembic/: env.py
backend/app/: __init__.py  admin.py  cli.py  dependencies.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: user.py
backend/app/routers/: admin.py  auth.py  health.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
backend/docs/: USER_MANAGEMENT.md
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py
docs/: DEPLOYMENT.md
