[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restocost"
version = "0.1.0"
description = "Restaurant cost management system"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.30.0",
    "PyJWT>=2.10.0",
    "bcrypt>=4.2.0",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.391",
    "ruff>=0.6.5",
    "black>=24.10.0",
    "isort>=5.13.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing -p pytest_python314_patch"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
precision = 2

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "**/node_modules", ".venv"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
